--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "skipthedishes",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://irvingv8.github.io/skipthedishes",
   "dependencies": {
+    "gh-pages": "^1.1.0",
     "polished": "^1.9.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
@@ -14,6 +16,8 @@
     "styled-components": "^2.2.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
